--- a/index.html
+++ b/index.html
@@ -181,6 +181,6 @@
         <p>&copy; Khushi Agarwal. All rights reserved.</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html> 
